# mcpp

./: .gitignore  readme.txt
Common/: .gitignore  readme.txt
Minecraft/: CMakeLists.txt
Minecraft/res/shaders/font/: fragment.glsl  vertex.glsl
Minecraft/res/shaders/solid/: fragment.glsl  vertex.glsl
Minecraft/res/solid/: fragment.glsl  vertex.glsl
Minecraft/src/: Minecraft.cpp  Minecraft.h  main.cpp
Minecraft/src/entity/: Camera.cpp  Camera.h  Entity.cpp  Entity.h
Minecraft/src/gui/: Gui.h  GuiDebug.cpp  GuiDebug.h  GuiScreen.h  ScaledResolution.cpp  ScaledResolution.h
Minecraft/src/performance/: ChunkStatistics.cpp  ChunkStatistics.h
Minecraft/src/render/: Camera.cpp  Camera.h  FontRenderer.cpp  FontRenderer.h  RenderMaster.cpp  RenderMaster.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
Minecraft/src/render/shaders/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderType.h
Minecraft/src/render/text/: FontRenderer.cpp  FontRenderer.h  TextRenderer.cpp  TextRenderer.h
Minecraft/src/utils/: DirectionVectors.cpp  DirectionVectors.h  FileUtils.cpp  FileUtils.h  InputOutput.cpp  InputOutput.h  TextureCoords.cpp  TextureCoords.h  Vectors.h
Minecraft/src/utils/exceptions/: ReportedException.h
Minecraft/src/utils/math/: DirectionVectors.cpp  DirectionVectors.h  MathHelper.cpp  MathHelper.h  SimplexNoise.cpp  SimplexNoise.h
Minecraft/src/world/: Block.cpp  Block.h  BlockFace.h  Chunk.cpp  Chunk.h  ChunkUpdate.h  FullChunk.cpp  FullChunk.h  World.cpp  World.h
